--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.45"
   },
   "devDependencies": {
+    "vue": "^3.2.45",
     "@vitejs/plugin-vue": "^4.0.0",
     "electron": "^22.1.0",
     "typescript": "^4.9.3",
